--- a/research.html
+++ b/research.html
@@ -22,9 +22,14 @@ p {
       <tr>
 		  
         <td>
+<!--	
+
 			<p style='text-align:justify;text-justify:inter-ideograph'><span
   lang=EN-US style='font-size:12.0pt'><a href="index.html">Back to Home</span></p>
-				
+
+
+-->
+			<button onclick="history.back()">Back to Home</button>	
 			<div align=center style='text-align:center'>
             <hr size=1 width="100%" align=center>
             </span></div>
