--- a/index.html
+++ b/index.html
@@ -11,20 +11,19 @@
   <div align=center>
     <table border=0 cellspacing=4 cellpadding=0 width=928>
       <tr>
-        <td width=539><p><strong><span lang=EN-US style='font-size:20.0pt'>PUN, Chi Man </span><span lang=ZH-CN style='font-family:"KaiTi",serif;font-size:18.0pt'> 潘治文 </span> </strong>
+        <td width=539><p><strong><span lang=EN-US style='font-size:20.0pt'>
+	   PUN, Chi Man </span><span lang=ZH-CN style='font-family:"KaiTi",serif;font-size:18.0pt'> 潘治文 </span> </strong>
 			
-			<span
-  lang=EN-US style='font-family:"Arial",sans-serif'><br>
+	   <span lang=EN-US style='font-family:"Arial",sans-serif'><br>
             B.Sc., M.Sc., Ph.D.</span></p>
-          <p><em><span lang=EN-US style='font-size:14.0pt;font-family:"Arial",sans-serif'>Professor</span></em>
-			  <span
-  lang=EN-US style='font-size:14.0pt;font-family:"Arial",sans-serif'><br>
+          <p><em><span lang=EN-US style='font-size:14.0pt;font-family:"Arial",sans-serif'>
+	    Professor</span></em> <span lang=EN-US style='font-size:14.0pt;font-family:"Arial",sans-serif'><br>
             <br>
             Department of Computer and Information Science<br>
             Faculty of Science and Technology <br>
             University of Macau<br>
             Avenida da Universidade, Taipa<br>
-            Macau, China<br><be>
+            Macau, China<br><be><br>
 		    
 	    Location:&nbsp;&nbsp;&nbsp;&nbsp;E11-4091<br>
             Telephone:&nbsp;(853) 8822-4369 <br>
@@ -55,8 +54,7 @@ His research interests include Image Processing and Pattern Recognition; Multime
       </tr>
       
 <tr>
-        <td colspan=3><div align=center style='text-align:center'><span lang=EN-US
-  style='font-size:10.0pt;'>
+        <td colspan=3><div align=center style='text-align:center'><span lang=EN-US style='font-size:10.0pt;'>
             <hr size=1 width="100%" align=center>
             </span></div>
           <p align=right style='text-align:right'><a href="https://www.fst.um.edu.mo/"
