--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
             Faculty of Science and Technology <br>
             University of Macau<br>
             Avenida da Universidade, Taipa<br>
-            Macau, China<br><be><br>
+            Macau, China<br>
+		    <br>
 		    
 	    Location:&nbsp;&nbsp;&nbsp;&nbsp;E11-4091<br>
             Telephone:&nbsp;(853) 8822-4369 <br>
