--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html xmlns="http://www.w3.org/TR/REC-html40">
+<html>
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=utf-8">
 <title>Prof. Chi Man Pun, University of Macau</title>
