--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body bgcolor=white lang=EN-US link=blue vlink=purple>
-<div class=WordSection1>
+<div class=CMP>
   <div align=center>
     <table border=0 cellspacing=4 cellpadding=0 width=928>
       <tr>
