--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             Avenida da Universidade, Taipa<br>
             Macau, China<br>
 		    <br>	    
-	    Location:&nbsp;&nbsp;&nbsp;&nbsp;E11-4091<br>
+	    Location:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;E11-4091<br>
             Telephone:&nbsp;(853) 8822-4369 <br>
             E-mail:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;cmpun AT {umac.mo, um.edu.mo}<u><span style='color:blue'><br>
             <br>
