--- a/research.html
+++ b/research.html
@@ -1,18 +1,10 @@
-<html xmlns="http://www.w3.org/TR/REC-html40">
+<html>
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=UTF-8">
 <title>Prof. Chi Man Pun, University of Macau</title>
 <link rel="icon" href="JP21.jpg">	
 	
-<style>
 
-
-p {
-    font-size: 12.0pt;
-    font-family: "Times New Roman", serif;
-}
-
-</style>
 </head>
 
 <body bgcolor=white lang=EN-US link=blue vlink=purple>
@@ -22,13 +14,7 @@ p {
       <tr>
 		  
         <td>
-<!--	
 
-			<p style='text-align:justify;text-justify:inter-ideograph'><span
-  lang=EN-US style='font-size:12.0pt'><a href="index.html">Back to Home</span></p>
-
-
--->
 			<button onclick="history.back()">Back to Home</button>	
 			<div align=center style='text-align:center'>
             <hr size=1 width="100%" align=center>
