--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
           <tr>
             <td colspan="3">
               <div align="center" style="text-align: center">
-                <span lang="EN-US" style="font-size: 10pt"><hr size="1" width="100%" align="center" /></span>
+                <span lang="EN-US" style="font-size: 10pt">
+                  <hr size="1" width="100%" align="center" />
+                </span>
               </div>
               <p style="text-align: justify; text-justify: inter-ideograph">
                 <span lang="EN-US" style="font-size: 14pt">
@@ -80,15 +82,10 @@
                   ECCV, AAAI, ICDE, IJCAI, MM, and VR), and co-invented several China/US
                   <a href="research.html#Patents">Patents</a>. He is also the recipient of the Macao Science and
                   Technology Award 2014 and the Best Paper Award in the 6th Chinese Conference on Pattern Recognition
-                  and Computer Vision (<a href="https://www.prcv2023.cn/">PRCV2023</a>). Dr. Pun has served as the
-                  General Chair/Co-Chair/Program Chair for many international conferences such as
-                  <a href="https://www.graphicslink.co.uk/cgiv2013/">CGIV2013</a>,
-                  <a href="https://www.graphicslink.co.uk/cgiv2014/">CGIV2014</a>,
-                  <a href="https://conferences.computer.org/icebe/2016/index.htm">ICEBE2016</a>,
-                  <a href="http://www.vcip2020.org/">VCIP2020</a>,
-                  <a href="https://iwait.online/iwait-2022-overview/">IWAIT2022</a>, etc., and served as the SPC/PC
-                  member for many top-tier conferences such as AAAI, CVPR, ICCV, ECCV, MM, etc. He is currently serving
-                  as the Editorial Board member for the journal of Artificial Intelligence (<a
+                  and Computer Vision (PRCV2023). Dr. Pun has served as the General Chair/Co-Chair/Program Chair for
+                  many international conferences such as CGIV2013, CGIV2014, ICEBE2016, VCIP2020, IWAIT2022, etc., and
+                  served as the SPC/PC member for many top-tier conferences such as AAAI, CVPR, ICCV, ECCV, MM, etc. He
+                  is currently serving as the Editorial Board member for the journal of Artificial Intelligence (<a
                     href="https://www.sciencedirect.com/journal/artificial-intelligence"
                     >AIJ</a
                   >). Besides, he has been listed in the
@@ -126,7 +123,9 @@
           <tr>
             <td colspan="3">
               <div align="center" style="text-align: center">
-                <span lang="EN-US" style="font-size: 10pt"><hr size="1" width="100%" align="center" /></span>
+                <span lang="EN-US" style="font-size: 10pt">
+                  <hr size="1" width="100%" align="center" />
+                </span>
               </div>
               <p align="right" style="text-align: right">
                 <a href="https://www.fst.um.edu.mo/" target='"_blank"'
