--- a/index.html
+++ b/index.html
@@ -83,10 +83,12 @@
                   <a href="research.html#Patents">Patents</a>. He is also the recipient of the Macao Science and
                   Technology Award 2014 and the Best Paper Award in the 6th Chinese Conference on Pattern Recognition
                   and Computer Vision (PRCV2023). Dr. Pun has served as the General Chair/Co-Chair/Program Chair for
-                  many international conferences such as CGIV2013, CGIV2014, ICEBE2016, VCIP2020, IWAIT2022, etc., and
-                  served as the SPC/PC member for many top-tier conferences such as AAAI, CVPR, ICCV, ECCV, MM, etc. He
-                  is currently serving as the Editorial Board member for the journal of Artificial Intelligence (<a
-                    href="https://www.sciencedirect.com/journal/artificial-intelligence"
+                  many international conferences such as the 10th and 11th International Conference Computer Graphics,
+                  Imaging and Visualization (CGIV2013, CGIV2014), the IEEE International Conference on Visual
+                  Communications and Image Processing (VCIP2020) and the International Workshop on Advanced Image
+                  Technology (IWAIT2022), etc., and served as the SPC/PC member for many top-tier conferences such as
+                  AAAI, CVPR, ICCV, ECCV, MM, etc. He is currently serving as the Editorial Board member for the journal
+                  of Artificial Intelligence (<a href="https://www.sciencedirect.com/journal/artificial-intelligence"
                     >AIJ</a
                   >). Besides, he has been listed in the
                   <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/">World's Top 2% Scientists</a>
