--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                   University of Macau from 2014 to 2019, where he is currently a Professor and in charge of the Image
                   Processing and Pattern Recognition Laboratory. He has investigated many externally funded research
                   <a href="research.html#Projects">Projects</a> as PI, authored/co-authored more than 200 refereed
-                  papers in many top-tier <a href="research.html#Journals">Journals</a> (including T-PAMI, T-IFS, T-IP,
-                  T-DSC, T-KDE, and T-MM) and <a href="research.html#Conferences">Conferences</a> (including CVPR, ICCV,
+                  papers in many top-tier <a href="research.html#Journals">Journals</a> (including TPAMI, TIFS, TIP,
+                  TDSC, TKDE, and TMM) and <a href="research.html#Conferences">Conferences</a> (including CVPR, ICCV,
                   ECCV, AAAI, ICDE, IJCAI, MM, and VR), and co-invented several China/US
                   <a href="research.html#Patents">Patents</a>. He is also the recipient of the Macao Science and
                   Technology Award 2014 and the Best Paper Award in the 6th Chinese Conference on Pattern Recognition
