--- a/research.html
+++ b/research.html
@@ -1,6 +1,7 @@
 <html lang=en>
   <head>
     <meta http-equiv=Content-Type content="text/html; charset=UTF-8">
+    <meta name="format-detection" content="telephone=no">
     <title>Prof. Chi Man Pun, University of Macau</title>
     <link rel="icon" href="JP21.jpg">
   </head>
