--- a/research.html
+++ b/research.html
@@ -68,14 +68,15 @@
               </p>
               <ol start=1 type=1>
                 <li style='text-align:justify;text-justify:inter-ideograph'>J. Wang, G. Huang, X. Yuan, G. Zhong, T. Lin, <b>C.-M. Pun</b>, F. Xie, "The Structure-sharing Hypergraph Reasoning Attention Module for CNNs," <i>Expert Systems with Applications</i>, 259, 125240, 2025. (JCR Q1) </li>
+                <li style='text-align:justify;text-justify:inter-ideograph'>T. Liu, X. Yuan, Z. Xie, K. Zhao, G. Huang, <b>C.-M. Pun</b>, "A Two-Phase Scheme by Integration of Deep and Corner Feature for Balanced Copy-Move Forgery Localization," <i>IEEE Transactions on Industrial Informatics</i>, In Press, 2024. (JCR Q1) </li>
                 <li style='text-align:justify;text-justify:inter-ideograph'>X. Du, <b>C.-M. Pun</b>, J. Zhou, "Efficient Physical Image Attacks Using Adversarial Fast Autoaugmentation Methods," <i>Knowledge-Based Systems</i>, 304, 112576, 2024. (JCR Q1) </li>
                 <li style='text-align:justify;text-justify:inter-ideograph'>W. Liu, X. Cun, <b>C.-M. Pun</b>, "DH-GAN: Image manipulation localization via a dual homology-aware generative adversarial network," <i>Pattern Recognition</i>, 155, 110658, 2024. (JCR Q1, CCF B) </li>
                 <li style='text-align:justify;text-justify:inter-ideograph'>J. Huang, G. Huang, X. Zhang, X. Yuan, F. Xie, <b>C.-M. Pun</b>, G. Zhong, "Black-box reversible adversarial examples with invertible neural network," <i>Image and Vision Computing</i>, 147, 105094, 2024. (JCR Q1) </li>
                 <li style='text-align:justify;text-justify:inter-ideograph'>B. Xiao, J. Hu, W. Li, <b>C.-M. Pun</b>, X. Bi, "CTNet: Contrastive Transformer Network for Polyp Segmentation," <i>IEEE Transactions on Cybernetics (TCYB)</i>, 54(9), pp. 5040-5053, 2024. (JCR Q1, CCF B) </li>
                 <li style='text-align:justify;text-justify:inter-ideograph'>Y. Zeng, <b>C.-M. Pun</b>, "Frequency-constrained transferable adversarial attack on image manipulation detection and localization," <i>The Visual Computer</i>, 40, pp. 4817-4828, 2024. (JCR Q2) </li>
-                
+                <li style='text-align:justify;text-justify:inter-ideograph'>Y. Jiang, X. Chen, <b>C.-M. Pun</b>, S. Wang, W. Feng, "MFDNet: Multi-Frequency Deflare Network for Efficient Nighttime Flare Removal," <i>The Visual Computer</i>, 40, pp.7575-7588, 2024. (JCR Q2) </li>
                 <li style='text-align:justify;text-justify:inter-ideograph'>J. Wang, G. Huang, G. Zhong, X. Yuan, <b>C.-M. Pun</b>, J. Wang, J. Liu, "A Novel Hypercomplex Graph Convolution Refining Mechanism," <i>IEEE Transactions on Emerging Topics in Computational Intelligence (TETCI)</i>, In Press, 2024. (JCR Q1) </li>
-                <li style='text-align:justify;text-justify:inter-ideograph'>Y. Jiang, X. Chen, <b>C.-M. Pun</b>, S. Wang, W. Feng, "MFDNet: Multi-Frequency Deflare Network for Efficient Nighttime Flare Removal," <i>The Visual Computer</i>, In Press, 2024. (JCR Q2) </li>
+                
                 <li style='text-align:justify;text-justify:inter-ideograph'>H. Li, G. Huang, X. Yuan, Z. Zheng, X. Chen, G. Zhong, <b>C.-M. Pun</b>, "Psanet: prototype-guided salient attention for few-shot segmentation," <i>The Visual Computer</i>, In Press, 2024. (JCR Q2) </li>
                 <li style='text-align:justify;text-justify:inter-ideograph'>X. Liu, G. Huang, X. Yuan, Z. Zheng, G. Zhong, X. Chen, <b>C.-M. Pun</b>, "Weakly supervised semantic segmentation via saliency perception with uncertainty-guided noise suppression," <i>The Visual Computer</i>, In Press, 2024. (JCR Q2) </li>
                 <li style='text-align:justify;text-justify:inter-ideograph'>Z. Li, X. Chen, S. Guo, <b>C.-M. Pun</b> and S. Wang, "WavEnhancer: Unifying Wavelet and Transformer for Image Enhancement," <i>Journal of Computer Science and Technology</i>, 39(2), pp.336-345, 2024. (CCF B) </li>
@@ -279,6 +280,7 @@
                 </b>
               </p>
               <ol start=1 type=1>
+                <li style='text-align:justify;text-justify:inter-ideograph'>X. Zhu, X. Ma, L. Su, Z. Jiang, B. Du, X. Wang, Z. Lei, W. Feng, <b>C.-M. Pun</b>, J. Zhou, "Mesoscopic Insights: Orchestrating Multi-scale & Hybrid Architecture for Image Manipulation Localization," <i>Proceedings of the 39th AAAI Conference on Artificial Intelligence (AAAI)</i>, 2025. (CCF A) </li>
                 <li style='text-align:justify;text-justify:inter-ideograph'>X. Ma, X. Zhu, L. Su, B. Du, Z. Jiang, B. Tong, Z. Lei, X. Yang, <b>C.-M. Pun</b>, J. Lv, J. Zhou, "IMDL-BenCo: A Comprehensive Benchmark and Codebase for Image Manipulation Detection & Localization," <i>Proceedings of the 38th Annual Conference on Neural Information Processing Systems (NeurIPS)</i>, Track Datasets and Benchmarks Spotlight, 2024. (CCF A) </li>
                 <li style='text-align:justify;text-justify:inter-ideograph'>X. Guo, X. Chen, S. Luo, S. Wang, <b>C.-M. Pun</b>, "Dual-Hybrid Attention Network for Specular Highlight Removal," <i>Proceedings of the 32nd ACM International Conference on Multimedia (MM)</i>, 2024. (CCF A) </li>
                 <li style='text-align:justify;text-justify:inter-ideograph'>X. Du, J. Zhu, J. Zhou, <b>C.-M. Pun</b>, Q. Xu, X. Liu, "DP-RAE: A Dual-Phase Merging Reversible Adversarial Example for Image Privacy Protection," <i>Proceedings of the 32nd ACM International Conference on Multimedia (MM)</i>, 2024. (CCF A) </li>
@@ -428,6 +430,7 @@
                 <span lang=EN-US style='font-size:14.0pt;color:#000099'>Patents</span>
               </p>
               <ol start=1 type=1>
+                <li style='color:black;text-align:justify;text-justify:inter-ideograph'> 苗启广, 冯冠文, 刘安, 李宇楠, 冯清扬, 马健歆, 李超能, <b>潘治文</b>, 石程, 刘如意, 王泉, "一种基于多层级注意力扩散模型的手语骨骼点序列生成方法", <i>中国专利</i>, CN118628616A, 2024-09-10. </li>
                 <li style='color:black;text-align:justify;text-justify:inter-ideograph'> 刘炜煌, 寸晓东, <b>潘治文</b>, "图像篡改检测方法、装置、设备及存储介质", <i>中国专利</i>, CN116363098A, 2023-06-30. </li>
                 <li style='color:black;text-align:justify;text-justify:inter-ideograph'> 王书强, 孔恒, 陈绪行, <b>潘治文</b>, "知识和数据驱动的脑网络计算方法、装置、电子设备及存储介质", <i>中国专利</i>, CN116188366A, 2023-05-30. </li>
                 <li style='color:black;text-align:justify;text-justify:inter-ideograph'> 王书强, 潘俊任, <b>潘治文</b>, 陈绪行, "结构功能关联的多模态脑网络计算方法、装置、设备及介质", <i>中国专利</i>, CN115813367A, 2023-03-21. </li>
