--- a/index.html
+++ b/index.html
@@ -88,14 +88,13 @@
                   Imaging and Visualization (CGIV2013, CGIV2014), the IEEE International Conference on Visual
                   Communications and Image Processing (VCIP2020) and the International Workshop on Advanced Image
                   Technology (IWAIT2022), etc., and served as the SPC/PC member for many top-tier conferences such as
-                  AAAI, CVPR, ICCV, ECCV, MM, etc. He is currently serving as the Editorial Board member for the journal
+                  AAAI, IJCAI, CVPR, ICCV, ECCV, MM, etc. He is currently serving as the Editorial Board member for the journal
                   of Artificial Intelligence (<a href="https://www.sciencedirect.com/journal/artificial-intelligence"
                     >AIJ</a
                   >). Besides, he has been listed in the
                   <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/">World's Top 2% Scientists</a>
                   by Stanford University since 2020. His research interests include Image Processing and Pattern
-                  Recognition; Multimedia Information Security, Forensic and Privacy; Adversarial Machine Learning and
-                  AI Security, etc.</span
+                  Recognition; Multimedia and AI  Security; Medical Image Analysis, etc.</span
                 >
               </p>
 
