--- a/research.html
+++ b/research.html
@@ -68,12 +68,13 @@
               </p>
               <ol start=1 type=1>
                 <li style='text-align:justify;text-justify:inter-ideograph'>X. Guo, X. Chen, S. Wang, <b>C.-M. Pun</b>, "Underwater Image Restoration Through a Prior Guided Hybrid Sense Approach and Extensive Benchmark Analysis," <i>IEEE Transactions on Circuits and Systems for Video Technology</i>, In Press, 2025. (JCR Q1) </li>
-                <li style='text-align:justify;text-justify:inter-ideograph'>C. Shi, P. Han, M. Zhao, L. Fang, Q. Miao, <b>C.-M. Pun</b>, "Adaptive Multi-type Contrastive Views Generation for Remote Sensing Image Semantic Segmentation," <i>IEEE Transactions on Geoscience and Remote Sensing</i>, In Press, 2025. (JCR Q1) </li>
-                <li style='text-align:justify;text-justify:inter-ideograph'>F. Ullah,<b>C.-M. Pun</b>, M.I. Mohmand, R.K. Mahendran, A.A. Khan, S.M. Alhammad, J.J.P.C. Rodrigues, A. Farouk, "Privacy-Aware Secure Data Auditing for Cloud-based Intelligence of Things Environment," <i>IEEE Internet of Things Journal</i>, In Press, 2025. (JCR Q1) </li>
+                <li style='text-align:justify;text-justify:inter-ideograph'>Q. Miao, W. Xin, R. Liu, Y. Liu, M. Wu, C. Shi, <b>C.-M. Pun</b>, "Adaptive Pitfall: Exploring the Effectiveness of Adaptation in Skeleton-based Action Recognition," <i>IEEE Transactions on Multimedia</i>, 27, pp.56-71, 2025. (JCR Q1) </li>
+                <li style='text-align:justify;text-justify:inter-ideograph'>C. Shi, P. Han, M. Zhao, L. Fang, Q. Miao, <b>C.-M. Pun</b>, "Adaptive Multi-type Contrastive Views Generation for Remote Sensing Image Semantic Segmentation," <i>IEEE Transactions on Geoscience and Remote Sensing</i>, 63, 5605513, 2025. (JCR Q1) </li>
+                <li style='text-align:justify;text-justify:inter-ideograph'>F. Ullah, <b>C.-M. Pun</b>, M.I. Mohmand, R.K. Mahendran, A.A. Khan, S.M. Alhammad, J.J.P.C. Rodrigues, A. Farouk, "Privacy-Aware Secure Data Auditing for Cloud-based Intelligence of Things Environment," <i>IEEE Internet of Things Journal</i>, In Press, 2025. (JCR Q1) </li>
                 <li style='text-align:justify;text-justify:inter-ideograph'>J. Yang, G. Huang, Y. Luo, X. Zhang, X. Yuan, X. Chen, <b>C.-M. Pun</b>, M. Cai, "TCIA: A Transformer-CNN Model with Illumination Adaptation for Enhancing Cell Image Saliency and Contrast," <i>IEEE Transactions on Instrumentation and Measurement</i>, In Press, 2025. (JCR Q1) </li>
                 <li style='text-align:justify;text-justify:inter-ideograph'>J. Wang, G. Huang, X. Yuan, G. Zhong, T. Lin, <b>C.-M. Pun</b>, F. Xie, "The Structure-sharing Hypergraph Reasoning Attention Module for CNNs," <i>Expert Systems with Applications</i>, 259, 125240, 2025. (JCR Q1) </li>
                 <li style='text-align:justify;text-justify:inter-ideograph'>J. Chen, G. Huang, X. Yuan, G. Zhong, Z. Tan, <b>C.-M. Pun</b>, Q. Yang, "Visual-linguistic Diagnostic Semantic Enhancement for medical report generation," <i>Journal of Biomedical Informatics</i>, 161, 104764, 2025. (JCR Q2) </li>
-                <li style='text-align:justify;text-justify:inter-ideograph'>Q. Miao, W. Xin, R. Liu, Y. Liu, M. Wu, C. Shi, <b>C.-M. Pun</b>, "Adaptive Pitfall: Exploring the Effectiveness of Adaptation in Skeleton-based Action Recognition," <i>IEEE Transactions on Multimedia</i>, In Press, 2024. (JCR Q1) </li>
+                
                 <li style='text-align:justify;text-justify:inter-ideograph'>Z. Jin, G. Huang, F. Zhang, X. Yuan, D. Zhu, Z. Tan, <b>C.-M. Pun</b>, G. Zhong, "SQ-ViT: A Multi-Scale Vision Transformer With Quaternion For Endoscopic Images Classification," <i>IEEE Transactions on Consumer Electronics</i>, In Press, 2024. (JCR Q2) </li>
                 <li style='text-align:justify;text-justify:inter-ideograph'>T. Liu, X. Yuan, Z. Xie, K. Zhao, G. Huang, <b>C.-M. Pun</b>, "A Two-Phase Scheme by Integration of Deep and Corner Feature for Balanced Copy-Move Forgery Localization," <i>IEEE Transactions on Industrial Informatics</i>, In Press, 2024. (JCR Q1) </li>
                 <li style='text-align:justify;text-justify:inter-ideograph'>X. Du, <b>C.-M. Pun</b>, J. Zhou, "Efficient Physical Image Attacks Using Adversarial Fast Autoaugmentation Methods," <i>Knowledge-Based Systems</i>, 304, 112576, 2024. (JCR Q1) </li>
@@ -283,7 +284,7 @@
               <p style="text-align:justify;text-justify:inter-ideograph"></p>
               <p id="Conferences" style="text-align:justify;text-justify:inter-ideograph">
                 <b>
-                  <span lang="EN-US" style="font-size:14.0pt">Conferences </span>
+                  <span lang="EN-US" style="font-size:14.0pt"><br />Conferences </span>
                 </b>
               </p>
               <ol start=1 type=1>
