--- a/index.html
+++ b/index.html
@@ -80,15 +80,15 @@
                   <a href="research.html#Projects">Projects</a> as PI, authored/co-authored more than 200 refereed
                   papers in many top-tier <a href="research.html#Journals">Journals</a> (including TPAMI, TIFS, TIP,
                   TDSC, TKDE, and TMM) and <a href="research.html#Conferences">Conferences</a> (including CVPR, ICCV,
-                  ECCV, AAAI, ICDE, IJCAI, MM, and VR), and co-invented several China/US
+                  ECCV, AAAI, NIPS, ICDE, IJCAI, MM, and VR), and co-invented several China/US
                   <a href="research.html#Patents">Patents</a>. He is also the recipient of the Macao Science and
                   Technology Award 2014 and the Best Paper Award in the 6th Chinese Conference on Pattern Recognition
                   and Computer Vision (PRCV2023). Dr. Pun has served as the General Chair/Co-Chair/Program Chair for
-                  many international conferences such as the 10th and 11th International Conference Computer Graphics,
+                  many international conferences such as the 10th and 11th International Conference on Computer Graphics,
                   Imaging and Visualization (CGIV2013, CGIV2014), the IEEE International Conference on Visual
                   Communications and Image Processing (VCIP2020) and the International Workshop on Advanced Image
                   Technology (IWAIT2022), etc., and served as the SPC/PC member for many top-tier conferences such as
-                  AAAI, IJCAI, CVPR, ICCV, ECCV, MM, etc. He is currently serving as the Editorial Board member for the journal
+                  AAAI, IJCAI, CVPR, ICCV, ECCV, MM, KDD, etc. He is currently serving as the Editorial Board member for the journal
                   of Artificial Intelligence (<a href="https://www.sciencedirect.com/journal/artificial-intelligence"
                     >AIJ</a
                   >). Besides, he has been listed in the
