--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                   many international conferences such as the 10th and 11th International Conference on Computer Graphics,
                   Imaging and Visualization (CGIV2013, CGIV2014), the IEEE International Conference on Visual
                   Communications and Image Processing (VCIP2020) and the International Workshop on Advanced Image
-                  Technology (IWAIT2022), etc., and served as the SPC/PC member for many top-tier conferences such as
-                  AAAI, IJCAI, CVPR, ICCV, ECCV, MM, KDD, etc. He is currently serving as the Editorial Board member for the journal
+                  Technology (IWAIT2022), etc., and regularly serves as the Area Chair/SPC/PC for many top-tier conferences such as MM,
+                  AAAI, IJCAI, CVPR, ICCV, ECCV, KDD, etc. He is currently serving as the Editorial Board member for the journal
                   of Artificial Intelligence (<a href="https://www.sciencedirect.com/journal/artificial-intelligence"
                     >AIJ</a
                   >). Besides, he has been listed in the
