--- a/research.html
+++ b/research.html
@@ -14,7 +14,7 @@
               <!--	
 <p style='text-align:justify;text-justify:inter-ideograph'><span lang=EN-US style='font-size:12.0pt'><a href="index.html">Back to Home</span></p>
 -->
-              <button onclick="history.back()">Back to Home</button>
+              <button onclick="history.back()">Back to Home</button> 
               <div align=center style='text-align:center'>
                 <hr size=1 width="100%" align=center>
               </div>
@@ -67,9 +67,11 @@
                 </b>
               </p>
               <ol start=1 type=1>
+                
                 <li style='text-align:justify;text-justify:inter-ideograph'>X. Guo, X. Chen, S. Wang, <b>C.-M. Pun</b>, "Underwater Image Restoration Through a Prior Guided Hybrid Sense Approach and Extensive Benchmark Analysis," <i>IEEE Transactions on Circuits and Systems for Video Technology</i>, In Press, 2025. (JCR Q1, CCF B) </li>
                 <li style='text-align:justify;text-justify:inter-ideograph'>K. Liu, T. Sun, H. Zeng, Y. Zhang, <b>C.-M. Pun</b>, C.-M. Vong, "Spatial-Aware Conformal Prediction for Trustworthy Hyperspectral Image Classification," <i>IEEE Transactions on Circuits and Systems for Video Technology</i>, In Press, 2025. (JCR Q1, CCF B) </li>
                 <li style='text-align:justify;text-justify:inter-ideograph'>W. Xin, Y. Liu, X. Fu, H. Wang, Q. Miao, R. Liu, L. Li, <b>C.-M. Pun</b>, "LLMs Encounter Critical Elements Prompts: Semantically Guided Partial Supervision Skeleton-based Action Recognition," <i>IEEE Sensors Journal</i>, In Press, 2025. (JCR Q1) </li>
+                <li style='text-align:justify;text-justify:inter-ideograph'>Y. He, L. Li, T. Zhan, <b>C.-M. Pun</b>, W. Jiao, Z. Jin, "Co-evidential fusion with information volume for semi-supervised medical image segmentation," <i>Pattern Recognition</i>, 166, 111639, 2025. (JCR Q1, CCF B) </li>
                 <li style='text-align:justify;text-justify:inter-ideograph'>C. Shi, L. Lu, M. Zhao, X. Hei, <b>C.-M. Pun</b>, Q. Miao, "Learning hyperspectral noisy label with global and local hypergraph laplacian energy," <i>Pattern Recognition</i>, 165, 111606, 2025. (JCR Q1, CCF B) </li>
                 <li style='text-align:justify;text-justify:inter-ideograph'>J. Wang, G. Huang, G. Zhong, X. Yuan, <b>C.-M. Pun</b>, J. Wang, J. Liu, "A Novel Hypercomplex Graph Convolution Refining Mechanism," <i>IEEE Transactions on Emerging Topics in Computational Intelligence (TETCI)</i>, 9(2), pp. 1673-1687, 2025. (JCR Q1) </li>
                 <li style='text-align:justify;text-justify:inter-ideograph'>Q. Miao, W. Xin, R. Liu, Y. Liu, M. Wu, C. Shi, <b>C.-M. Pun</b>, "Adaptive Pitfall: Exploring the Effectiveness of Adaptation in Skeleton-based Action Recognition," <i>IEEE Transactions on Multimedia</i>, 27, pp.56-71, 2025. (JCR Q1, CCF B) </li>
