--- a/research.html
+++ b/research.html
@@ -67,7 +67,8 @@
                 </b>
               </p>
               <ol start=1 type=1>
-                
+                <li style='text-align:justify;text-justify:inter-ideograph'>J. Wang, J.-C. Xie, X. Li, F. Xu, <b>C.-M. Pun</b>, H. Gao, "GaussianHead: High-fidelity Head Avatars with Learnable Gaussian Derivation," <i>IEEE Transactions on Visualization and Computer Graphics</i>, In Press, 2025. (JCR Q1, CCF A) </li>
+                <li style='text-align:justify;text-justify:inter-ideograph'>Z. Lin, G. Huang, Z. Chen, Y. Li, X. Yuan, <b>C.-M. Pun</b>, L. Cheng, "Multi-Scale Frequency Guided Image Analyses for Mixed-Modality Medical Image Segmentation," <i>IEEE Transactions on Instrumentation and Measurement</i>, In Press, 2025. (JCR Q1) </li>
                 <li style='text-align:justify;text-justify:inter-ideograph'>X. Guo, X. Chen, S. Wang, <b>C.-M. Pun</b>, "Underwater Image Restoration Through a Prior Guided Hybrid Sense Approach and Extensive Benchmark Analysis," <i>IEEE Transactions on Circuits and Systems for Video Technology</i>, In Press, 2025. (JCR Q1, CCF B) </li>
                 <li style='text-align:justify;text-justify:inter-ideograph'>K. Liu, T. Sun, H. Zeng, Y. Zhang, <b>C.-M. Pun</b>, C.-M. Vong, "Spatial-Aware Conformal Prediction for Trustworthy Hyperspectral Image Classification," <i>IEEE Transactions on Circuits and Systems for Video Technology</i>, In Press, 2025. (JCR Q1, CCF B) </li>
                 <li style='text-align:justify;text-justify:inter-ideograph'>W. Xin, Y. Liu, X. Fu, H. Wang, Q. Miao, R. Liu, L. Li, <b>C.-M. Pun</b>, "LLMs Encounter Critical Elements Prompts: Semantically Guided Partial Supervision Skeleton-based Action Recognition," <i>IEEE Sensors Journal</i>, In Press, 2025. (JCR Q1) </li>
