--- a/research.html
+++ b/research.html
@@ -24,7 +24,7 @@
               </p>
               <ol start=1 type=1>
                 <li style='text-align:justify;text-justify:inter-ideograph'>
-                  <b>面向醫學大模型的對抗攻擊與防禦研究</b>, 國家自然基金與澳門科學技術發展基金聯合科研資助, FDCT-NSFC 0079/2025/AFJ, <i>項目負責人</i>, 2025-2028, 進行中.
+                  <b>面向醫學大模型的對抗攻擊與防禦研究</b>, 國家自然科學基金與澳門科學技術發展基金聯合科研資助, FDCT-NSFC 0079/2025/AFJ, <i>項目負責人</i>, 2025-2028, 進行中.
                 </li>
                 <li style='text-align:justify;text-justify:inter-ideograph'>
                   <b>Multi-person Interactive Action Recognition Based on Effective and Reliable Deep Models</b>, funded by the Macau Science and Technology Fund, FDCT 0193/2023/RIA3, <i>Principal Investigator</i>, 2024-2027, on-going.
@@ -72,6 +72,7 @@
               <ol start=1 type=1>
                 <li style='text-align:justify;text-justify:inter-ideograph'>W. Liu, X. Shen, <b>C.-M. Pun</b>, X. Cun, "Explicit Visual Prompting for Universal Foreground Segmentations," <i>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)</i>, In Press, 2025. (JCR Q1, CCF A) </li>
                 <li style='text-align:justify;text-justify:inter-ideograph'>X. Du, J. Zhu, J. Zhou <b>C.-M. Pun</b>, Z. Lin, C. Wu, Z. Chen, J. Luo, "DP-TRAE: A Dual-Phase Merging Transferable Reversible Adversarial Example for Image Privacy Protection," <i>IEEE Transactions on Dependable and Secure Computing (TDSC)</i>, In Press, 2025. (JCR Q1, CCF A) </li>
+                <li style='text-align:justify;text-justify:inter-ideograph'>X. Chen, Z. Li, Y. Shen, M. Mahmud, H. Pham, MKP Ng, <b>C.-M. Pun</b>, S. Wang, "High-Fidelity Functional Ultrasound Reconstruction via A Visual Auto-Regressive Framework," <i>IEEE Journal of Biomedical and Health Informatics (JBHI)</i>, In Press, 2025. (JCR Q1) </li>
                 <li style='text-align:justify;text-justify:inter-ideograph'>C. Shi, W. Liu, L. Fang, Z. You, Q. Miao, <b>C.-M. Pun</b>, "Few-Shot Learning Based on Multilevel Contrast for Cross-domain Hyperspectral Image Classification," <i>IEEE Transactions on Geoscience and Remote Sensing (TGRS)</i>, 63, 5522918, 2025. (JCR Q1, CCF B) </li>
                 <li style='text-align:justify;text-justify:inter-ideograph'>J. Wang, J.-C. Xie, X. Li, F. Xu, <b>C.-M. Pun</b>, H. Gao, "GaussianHead: High-fidelity Head Avatars with Learnable Gaussian Derivation," <i>IEEE Transactions on Visualization and Computer Graphics (TVCG)</i>, 31(7), pp. 4141-4154, 2025. (JCR Q1, CCF A) </li>
                 <li style='text-align:justify;text-justify:inter-ideograph'>Z. Lin, G. Huang, M. Li, X. Yuan, G. Yue, <b>C.-M. Pun</b>, L. Cheng, "SFCANet: Channel Attention in Spatial-Frequency Domain for Infrared Small Target Detection," <i>IEEE Transactions on Aerospace and Electronic Systems (TAES)</i>, 61(5), pp. 13363-13379, 2025. (JCR Q1) </li>
